# OVPO

./: .editorconfig  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yaml.bak  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  Makefile  NOTICE  README.md  SECURITY.md  TODO.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_report.md
.github/workflows/: ci.yml  lint.yml  no-forbidden-comment-marker.yml  schema-validate.yml
cli/: README.md
examples/: README.md  send_minimal_ingest.py
infra/: README.md  docker-compose.yml
schemas/v0.08/: artifact_manifest.json  frame_event.json  index.json  ingest_batch.json  schema_index.json  span.json  trace.json
schemas/v0.08/examples/invalid/: ingest_batch_missing_batch_id.json
schemas/v0.08/examples/valid/: ingest_batch_minimal.json
sdk/: README.md
sdk/js/: README.md
sdk/python/: README.md
sdk/rust/: README.md
server/: README.md
server/collector/: README.md  app.py
server/processor/: README.md  worker.py
server/query-api/: README.md  app.py
server/query_api/: app.py
spec/v0.08/: OVPO_DEVELOPER_SPEC.md
src/ovpo/: cli.py  schemas.py
tests/: README.md  conftest.py  test_collector_endpoints.py  test_collector_health.py  test_schema_validation.py
tools/: README.md
ui/: README.md
