[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ovpo"
version = "0.0.0-dev"
description = "Open Video Pipeline Observatory (OVPO) — developer scaffolding"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "OVPO Contributors" }]
dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "typer>=0.12",
  "jsonschema>=4.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "httpx>=0.26",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.8",
  "types-jsonschema",
]

[project.scripts]
ovpo = "ovpo.cli:main"
ovpo-schema = "ovpo.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
  "schemas",
  "spec",
]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
